server/configFiles/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Thu Mar 27 20:05:19 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [161:156056]
-A INPUT -p gre -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -m state --state NEW -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# SSH
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
# ForerunnerDB rest interface
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# Drop all other connections
-A INPUT -j DROP
-A FORWARD -s 172.20.1.0/24 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Thu Mar 27 20:05:19 2014
# Generated by iptables-save v1.4.21 on Thu Mar 27 20:05:19 2014
*nat
:PREROUTING ACCEPT [5:284]
:INPUT ACCEPT [3:180]
:OUTPUT ACCEPT [6:363]
:POSTROUTING ACCEPT [3:180]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Thu Mar 27 20:05:19 2014
